finished the header for now

--- a/index.html
+++ b/index.html
@@ -7,22 +7,36 @@
     <title>Title</title>
 </head>
 <body>
+    <header>
+        <div class="outer-container">
+            <nav class="inner-container_nav">
+                <ul>
+                    <li><a href="/">Case Studies</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+            <div class="inner-container_header-content">
+                <h1>Your website is an investment in the success of your business.</h1>
+                <h3>We are here to help you succeed.</h3>
+                <button type="button" class="button">Let's work together</button>
+            </div>
+            <span class="inner-container_img">
+                <img src="./assets/squiggle_line_stripe.svg" alt="qurk gulf line"/>
+            </span>
+        </div>
+    </header>
 
+<!-- /////////////////////// end of header section ///////////////////   -->
 
+    <body>
 
+    </body>
 
+<!-- /////////////////////// end of body section /////////////////////   -->
 
+    <footer>
 
-
-
-
-
-
-
-
-
-
-
-
+    </footer>
 </body>
 </html>
