--- a/index.html
+++ b/index.html
@@ -7,36 +7,77 @@
     <title>Title</title>
 </head>
 <body>
-    <header>
-        <div class="outer-container">
-            <nav class="inner-container_nav">
-                <ul>
-                    <li><a href="/">Case Studies</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </nav>
-            <div class="inner-container_header-content">
-                <h1>Your website is an investment in the success of your business.</h1>
-                <h3>We are here to help you succeed.</h3>
-                <button type="button" class="button">Let's work together</button>
-            </div>
-            <span class="inner-container_img">
-                <img src="./assets/squiggle_line_stripe.svg" alt="qurk gulf line"/>
-            </span>
+<header>
+    <div class="outer-container">
+        <nav class="inner-container_nav">
+            <ul>
+                <li><a href="/">Case Studies</a></li>
+                <li><a href="/">Services</a></li>
+                <li><a href="/">Contact Us</a></li>
+            </ul>
+        </nav>
+        <div class="inner-container_header-content">
+            <h1>Your website is an investment in the success of your business.</h1>
+            <h3>We are here to help you succeed.</h3>
+            <button type="button" class="button">Let's work together</button>
         </div>
-    </header>
+        <span class="inner-container_img">
+                <img src="./assets/squiggle_line_stripe.svg" alt="qurk gulf line"/>
+        </span>
+    </div>
+</header>
 
 <!-- /////////////////////// end of header section ///////////////////   -->
 
-    <body>
+<main>
+    <section class="outer-container_section_intro">
+        <div class="inner-container_div_intro">
+            <h2>Rekupe is a digital agency in Los Angeles. </h2>
+            <h2>We use strategic UX, SEO optimization and beautiful visual
+                designs to help your business grow. </h2>
+            <h2>We see every project as a fresh opportunity, pushing ourselves to
+                create new digital experiences. </h2>
+            <p>Have a question? <a href="/">Click here</a> to contact us!</p>
+        </div>
+    </section>
 
-    </body>
+    <section class="outer-container_section_projects">
+        <article class="inner-container_projects">
+            <div>
+                <h3>Rolling Stone</h3>
+                <p>
+                You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global
+                icon.
+                </p>
+            </div>
+            <span>
+                <img src="./assets/work-image-01.jpeg" alt="image rolling stone work place">
+            </span>
+        </article>
+        <article class="inner-container_projects">
+            <div>
+
+            </div>
+            <span>
+                <img src="" alt="">
+            </span>
+        </article>
+        <article class="inner-container_projects">
+            <div>
+
+            </div>
+            <span>
+                <img src="" alt="">
+            </span>
+        </article>
+    </section>
+
+</main>
 
 <!-- /////////////////////// end of body section /////////////////////   -->
 
-    <footer>
+<footer>
 
-    </footer>
+</footer>
 </body>
 </html>
