finished projects section

--- a/index.html
+++ b/index.html
@@ -41,33 +41,52 @@
         </div>
     </section>
 
-    <section class="outer-container_section_projects">
+    <section class="outer-container_section_projects section2">
         <article class="inner-container_projects">
-            <div>
-                <h3>Rolling Stone</h3>
+            <div class="inner-container_div_projects">
+                <h2>Rolling Stone</h2>
+                <span class="image-wrapper-squiggle">
+                    <img src="./assets/squiggle_line.svg" alt="qurk purple gulf"/>
+                </span>
                 <p>
-                You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global
-                icon.
+                    You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global
+                    icon.
                 </p>
+                <a href="/">View project</a>
             </div>
-            <span>
-                <img src="./assets/work-image-01.jpeg" alt="image rolling stone work place">
+            <span class="image-wrapper-projects">
+                <img src="./assets/work-image-01.jpeg" alt="image rolling stone work place"/>
+            </span>
+        </article>
+        <article class="inner-container_projects reverse">
+            <div class="inner-container_div_projects">
+                <h2>Variety</h2>
+                <span class="image-wrapper-squiggle">
+                    <img src="./assets/squiggle_line.svg" alt="qurk purple gulf"/>
+                </span>
+                <p>
+                    Variety is an industry leader for breaking entertainment news, reviews and box office results with
+                    archive of content dating back to 1905.
+                </p>
+                <a href="/">View project</a>
+            </div>
+            <span class="image-wrapper-projects">
+                <img src="./assets/work-image-02.jpeg" alt="image variety work"/>
             </span>
         </article>
         <article class="inner-container_projects">
-            <div>
-
+            <div class="inner-container_div_projects">
+                <h2>Worth</h2>
+                <span class="image-wrapper-squiggle">
+                    <img src="./assets/squiggle_line.svg" alt="qurk purple gulf"/>
+                </span>
+                <p>
+                    A global media platform connecting a community that embraces worth beyond wealth.
+                </p>
+                <a href="/">View project</a>
             </div>
-            <span>
-                <img src="" alt="">
-            </span>
-        </article>
-        <article class="inner-container_projects">
-            <div>
-
-            </div>
-            <span>
-                <img src="" alt="">
+            <span class="image-wrapper-projects">
+                <img src="./assets/work-image-03.jpeg" alt="image worth work"/>
             </span>
         </article>
     </section>
