--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </section>
 
-    <section class="outer-container_section_projects section2">
+    <section class="outer-container_section_projects">
         <article class="inner-container_projects">
             <div class="inner-container_div_projects">
                 <h2>Rolling Stone</h2>
@@ -90,13 +90,104 @@
             </span>
         </article>
     </section>
+    <section class="outer-container_section_services">
+        <div class="outer-container_div_services">
+            <article class="inner-container_services">
+                <span class="image-wrapper-icons">
+                    <img src="./assets/icon_web-design.svg" alt="icon web design"/>
+                </span>
+                <h3>Web Design</h3>
+                <p>Good web design is how companies stand out from their competitors. High quality web design leads to
+                    increased user conversion and engagement. Through a proven web design process, we help clients
+                    launch websites and products that improve on their bottom line.
+                </p>
+            </article>
+            <article class="inner-container_services">
+                <span class="image-wrapper-icons">
+                <img src="./assets/icon_web-development.svg" alt="icon web development">
+                </span>
+                <h3>Web Development</h3>
+                <p>
+                    Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites
+                    with a mobile first approach and ensure that our code quality is clean, organized and performant.
+                    Already have a design but need it developed? We’re here to help!
+                </p>
+            </article>
+            <article class="inner-container_services">
+                <span class="image-wrapper-icons">
+                <img src="./assets/icon_ux.svg" alt="icon UX">
+                </span>
+                <h3>User Experience</h3>
+                <p>
+                    In order to build successful products you have to understand the user. We create user personas,
+                    wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape
+                    the product and can quickly eliminate potential risks – saving you time and money.
+                </p>
+            </article>
+            <article class="inner-container_services">
+                <span class="image-wrapper-icons">
+                <img src="./assets/icon_graphic-design.svg" alt="icon design + branding">
+                </span>
+                <h3>Logo Design + Branding</h3>
+                <p>
+                    Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable
+                    logos and brand identity. The best brands stand out from the crowd by having a clear and unique
+                    point of view. We will work with you to understand your vision and help create a unique brand
+                    identity and style guide for your company.
+                </p>
+            </article>
+            <article class="inner-container_services">
+                <span class="image-wrapper-icons">
+                <img src="./assets/icon_seo.svg" alt="icon SEO">
+                </span>
+                <h3>SEO</h3>
+                <p>
+                    Do you want your site to rank higher in search results? Google is constantly changing their
+                    algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure
+                    your website it optimized, providing you the best opportunities for organic search exposure.
+                </p>
+            </article>
+            <article class="inner-container_services">
+                <span class="image-wrapper-icons">
+                <img src="./assets/icon_copywriting.svg" alt="icon copy writing">
+                </span>
+                <h3>Copy Writing</h3>
+                <p>
+                    Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of
+                    voice will help you stand out from the crowd and build brand loyalty. We work with you to establish
+                    your brand bible and ensure your messaging is focused and targeted.
+                </p>
+            </article>
+        </div>
+    </section>
+    <section class="outer-container_section_form">
+        <div class="inner-container_div_form">
+            <h1>Let's work together</h1>
+            <p>
+                Have a question? Need a quote? Let us know!
+            </p>
+            <form onsubmit="hier-is-js-voor-nodig" class="inner-container_form">
+                <label for="name-field">Name</label>
+                <input type="text" id="name-field" name="full_name" placeholder="Name"/>
 
+                <label for="email-field">Email</label>
+                <input type="email" id="email-field" name="email" placeholder="Email"/>
+
+                <label for="message-field">Message</label>
+                <textarea name="message" id="message-field" cols="30" rows="10" placeholder="Message"></textarea>
+
+                <button class="button button_form" type="submit">Send</button>
+            </form>
+        </div>
+    </section>
 </main>
 
 <!-- /////////////////////// end of body section /////////////////////   -->
 
 <footer>
-
+    <p>
+        Business website opdracht © NOVI Hogeschool 2022
+    </p>
 </footer>
 </body>
 </html>
