finished footer and finished project basis

--- a/index.html
+++ b/index.html
@@ -184,10 +184,12 @@
 
 <!-- /////////////////////// end of body section /////////////////////   -->
 
-<footer>
-    <p>
+<footer class="outer-container_footer">
+    <div class="inner-container_div_footer">
+        <p>
         Business website opdracht © NOVI Hogeschool 2022
-    </p>
+        </p>
+    </div>
 </footer>
 </body>
 </html>
